--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,20 @@ version: '3.8'
 services:
   app:
     build: .
+    env_file: .env
+    expose:
+      - "5000"
+    restart: always
+
+  nginx:
+    image: nginx:alpine
     ports:
-      - "5000:5000"
-    environment:
-      - NODE_ENV=production
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/infraaudit
-      - PGDATABASE=infraaudit
-      - PGHOST=db
-      - PGPORT=5432
-      - PGUSER=postgres
-      - PGPASSWORD=postgres
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
-      - db
-    restart: unless-stopped
+      - app
+    restart: always
 
   db:
     image: postgres:15-alpine
