--- a/.env
+++ b/.env
@@ -19,3 +19,15 @@ PGHOST=ep-calm-snow-a4uvy34l-pooler.us-east-1.aws.neon.tech
 PGPORT=5432
 PGUSER=infra_owner
 PGPASSWORD=npg_b1VqtoSrW0wE
+
+# OAuth Configuration
+# Google OAuth
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+
+# GitHub OAuth
+GITHUB_CLIENT_ID=your_github_client_id_here
+GITHUB_CLIENT_SECRET=your_github_client_secret_here
+
+# OAuth Callback URLs (update these based on your domain)
+BASE_URL=http://localhost:5000
