migrate this repo to frontend only and deleted all the databases

--- a/.env
+++ b/.env
@@ -31,3 +31,7 @@ GITHUB_CLIENT_SECRET=your_github_client_secret_here
 
 # OAuth Callback URLs (update these based on your domain)
 BASE_URL=http://localhost:5000
+
+# Frontend API endpoints
+VITE_API_BASE_URL=http://localhost:5000
+VITE_OAUTH_BACKEND_BASE=http://localhost:5000
