--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "tsc"
   },
   "dependencies": {
     "@aws-sdk/client-cloudwatch": "^3.812.0",
@@ -54,8 +53,6 @@
     "@stripe/stripe-js": "^7.3.0",
     "@tanstack/react-query": "^5.60.5",
     "@types/multer": "^1.4.12",
-    "@types/passport-github2": "^1.2.9",
-    "@types/passport-google-oauth20": "^2.0.16",
     "@types/pg": "^8.15.1",
     "@types/react-helmet": "^6.1.11",
     "chart.js": "^4.4.9",
@@ -79,8 +76,6 @@
     "next-themes": "^0.4.6",
     "openai": "^4.103.0",
     "passport": "^0.7.0",
-    "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.15.6",
     "react": "^18.3.1",
