--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         # Override at deploy time as needed
         VITE_API_BASE_URL: ${VITE_API_BASE_URL-http://localhost:5000}
         VITE_OAUTH_BACKEND_BASE: ${VITE_OAUTH_BACKEND_BASE-http://localhost:5000}
-    image: infraaudit-frontend:latest
+    image: infraudit-frontend:latest
     ports:
       - "8080:80"
     environment:
